tests/e2e/ingress/00-install.yaml
---
apiVersion: opentelemetry.io/v1beta1
kind: OpenTelemetryCollector
metadata:
  name: otel-simplest
spec:
  mode: deployment
  ingress:
    type: ingress
    hostname: "example.com"
    annotations:
      something.com: "true"
  config:
    receivers:
      otlp:
        protocols:
          grpc: {}
          http: {}

    exporters:
      debug: {}

    service:
      pipelines:
        traces:
          receivers: [otlp]
          exporters: [debug]
