tests/e2e/ingress/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: ingress
spec:
  steps:
    - name: step-00
      try:
        - apply:
            file: 00-install.yaml
        - assert:
            file: 00-assert.yaml
    # Applying the same OpenTelemetryCollector from the previous step, but this time without the spec.ingress, which should inform the controller to delete the ingress resource. So, we should get an error checking if the ingress still exists.
    - name: step-01
      try:
        - apply:
            file: 01-install.yaml
        - sleep:
            duration: 5s
        - error:
            file: 01-error.yaml
